# camera-scripts

./: .gitignore  Common.hs  README.md  build_in_sandbox.sh  build_with_stack_USE-THIS.sh  cabal.config  cabal.project  camera-scripts.cabal  move_movies.sh  move_photos.sh  pull  rename-incoming-photos.sh  renamePhotos.hs  renameSamsungS3Photos.hs  renameUsingExifTags.hs  rot270.sh  rot90.sh  template.html  transcodeToWebm.hs
