name:                camera-scripts
version:             0.1.0.0
synopsis:            Utilities for managing photos
-- description:         
homepage:            https://github.com/carlohamalainen/camera-scripts
license:             BSD3
license-file:        LICENSE
author:              Carlo Hamalainen
maintainer:          carlo.hamalainen@gmail.com
-- copyright:           
category:            System
build-type:          Simple
cabal-version:       >=1.8

executable rename-photos
  main-is:             renamePhotos.hs
  -- other-modules:       
  build-depends:       base, bytestring, containers, directory, filepath, parsec, pipes <= 3.3.0, process, text, transformers
